--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.1",
+    "bootstrap-select": "^1.13.18",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
+    "react-bootstrap-select": "^0.14.0",
+    "react-bootstrap-select-dropdown": "^1.3.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.7"
   }
 }
